# snake-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  play.py  pyproject.toml
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
snake_tui/: __init__.py  app.py  engine.py  sounds.py  state.py
tests/: perf.py  playtest.py  qa.py
