[project]
name = "snake-tui"
version = "0.1.0"
description = "Terminal Snake with Textual — classic grid-accretion, ramping speed, 2-player hotseat"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["snake_tui"]

[tool.setuptools.package-data]
snake_tui = ["tui.tcss"]
